--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ a:hover {
     color:brown;
 }
 .btn-custom {
-    color:saddlebrown;
-    background-color: antiquewhite;
+    color:#E1BB80;
+    background-color: #685634;
 }
 nav a:visited {
     color:beige;
